--- a/src/style/Styles.css
+++ b/src/style/Styles.css
@@ -1,5 +1,6 @@
 /* Add this to your global CSS file */
 @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap');
+@import "tailwindcss";
 
 * {
   margin: 0;
